// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginButton matches snapshot with logged in user profile 1`] = `
<div>
  <div
    aria-describedby={null}
    className="MuiAvatar-root-45 MuiAvatar-colorDefault-46"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    title="Test"
  />
  <button
    aria-owns={null}
    className="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6 MuiButton-colorInherit-22"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-2"
    >
      Test name
    </span>
    <span
      className="MuiTouchRipple-root-30"
    />
  </button>
</div>
`;

exports[`LoginButton matches snapshot with logged out user 1`] = `
<div>
  <button
    aria-owns={null}
    className="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6 MuiButton-colorInherit-22"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-2"
    />
    <span
      className="MuiTouchRipple-root-30"
    />
  </button>
</div>
`;
